compiler/tests/fa/errors/noret_rettype_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
بی‌بازگشت تابع بد() : صحیح:
    تاوقتی true:
    پایان
پایان

تابع اصلی:
    بد()
پایان
